# flairsim

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml
docs/: api.md  architecture.md  contributing.md  guide.tex
flairsim/: __init__.py
flairsim/core/: __init__.py  action.py  grid.py  observation.py  scenario.py  simulator.py
flairsim/data/: __init__.py  downloader.py
flairsim/drone/: __init__.py  camera.py  drone.py  telemetry.py
flairsim/map/: __init__.py  map_manager.py  modality.py  tile_loader.py
flairsim/server/: __init__.py  __main__.py  app.py  cli.py
flairsim/viewer/: __init__.py  __main__.py  hud.py  minimap.py  remote.py  viewer.py
flairsim/web/: __init__.py  __main__.py  app.py  cli.py  leaderboard.py  sessions.py
flairsim/web/static/: app.js  index.html  style.css
notebooks/: tutorial.ipynb
scenarios/: find_red_car_2_D004.yaml  find_red_car_D004.yaml  find_target_D004.yaml  find_target_D006.yaml  find_truck_D006.yaml  quick_explore_D012.yaml
tests/: __init__.py  test_action.py  test_camera.py  test_downloader.py  test_drone.py  test_grid.py  test_leaderboard.py  test_map_manager.py  test_modality.py  test_multimodality.py  test_observation.py  test_scenario.py  test_server.py  test_sessions.py  test_simulator.py  test_telemetry.py  test_tile_loader.py  test_web_routes.py
